Initial commit: NaLang Telegram Bot v2.0

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,23 @@
-# Telegram Bot Token
-TELEGRAM_TOKEN=your_telegram_bot_token_here
+# Telegram
+TELEGRAM_TOKEN=your_key_here
 
-# NaLang API Keys (多个用逗号分隔)
-NALANG_API_KEYS=key1,key2,key3
+# Nalang API Keys (逗号分隔)
+NALANG_API_KEYS=your_key_here
 
-# Gemini API Keys (多个用逗号分隔)
-GEMINI_API_KEYS=key1,key2
+# Nalang API URL (可选)
+NALANG_API_URL=your_key_here
 
-# Chutes/DeepSeek API Token
-CHUTES_API_TOKEN=your_chutes_token_here
+# Gemini配置
+GEMINI_API_KEYS=your_key_here
+GEMINI_API_URL=your_key_here
 
-# Database Path (可选，默认 ./data/bot.db)
-DATABASE_PATH=./data/bot.db
+# Chutes AI配置（用于DeepSeek）
+CHUTES_API_TOKEN=your_key_here
+CHUTES_API_URL=your_key_here
 
-# Log Level (可选，默认 info)
-LOG_LEVEL=info
+# 日志配置
+LOG_LEVEL=your_key_here
+LOG_DIR=your_key_here
+
+# 数据库路径 (可选)
+DATABASE_PATH=your_key_here
